--- a/mystyle.css
+++ b/mystyle.css
@@ -13,3 +13,13 @@
 .light{
     color: hsl(145, 40%, 44%);
 }
+
+tr .heavy{
+    color: hsl(100, 40%, 25%);
+    background-color: hsl(100, 40%, 15%);
+}
+
+tr .light{
+    color: hsl(145, 40%, 44%);
+    background-color: hsl(100, 40%, 30%);
+}
